--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@contentful/f36-components": "^4.4.0",
     "@contentful/f36-tokens": "^4.0.1",
     "@emotion/css": "^11.7.1",
+    "constate": "^3.3.0",
     "contentful-management": "^8.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
