--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@contentful/app-sdk": "^4.3.5",
     "@contentful/f36-components": "^4.4.0",
+    "@contentful/f36-icons": "^4.4.0",
     "@contentful/f36-tokens": "^4.0.1",
+    "@contentful/field-editor-shared": "^1.1.2",
     "@emotion/css": "^11.7.1",
     "constate": "^3.3.0",
     "contentful-management": "^8.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "cross-env BROWSER=none react-scripts start",
@@ -44,6 +47,7 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/uuid": "^8.3.4",
     "cross-env": "^7.0.3",
     "typescript": "^4.6.3"
   },
