--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@contentful/f36-icons": "^4.4.0",
     "@contentful/f36-tokens": "^4.0.1",
     "@contentful/field-editor-shared": "^1.1.2",
+    "@dnd-kit/core": "^5.0.3",
+    "@dnd-kit/sortable": "^6.0.1",
+    "@dnd-kit/utilities": "^3.1.0",
     "@emotion/css": "^11.7.1",
+    "clsx": "^1.1.1",
     "constate": "^3.3.0",
     "contentful-management": "^8.2.2",
     "react": "^17.0.2",
